Make sure that the prices wrap on smaller screens

--- a/packages/blocks-next/src/blocks/product-collection-tags/style.scss
+++ b/packages/blocks-next/src/blocks/product-collection-tags/style.scss
@@ -2,8 +2,7 @@
 	gap: 3px;
 	width: 100%; // prevent collapsing during loading.
 	list-style: none;
-	margin-bottom: 0;
-	margin-top: 0;
+	margin: 0;
 	max-width: 100%;
 	padding: 0;
 }
